# imageDraw

./: .gitignore  README.md  doc.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ai/: dashscope.rs  google_gemini.rs  mod.rs  openai_compatible.rs  provider.rs  seedream.rs  tencent_hunyuan.rs
src-tauri/src/commands/: dialog.rs  file.rs  gallery.rs  generation.rs  mod.rs  provider.rs  update.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/storage/: mod.rs
